NGINX-TESTE/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
