NGINX-TESTE/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: nginx.traefik.pennux.core.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
